--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
     "nuxt-fontawesome": "^0.4.0",
+    "vue-kindergarten": "^0.3.3",
     "vue-nav-tabs": "^0.5.7",
     "vuex-persist": "^3.1.3"
   },
