--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nuxt": "^2.14.6",
     "nuxt-fontawesome": "^0.4.0",
     "vue-kindergarten": "^0.3.3",
+    "vue-multiselect": "^2.1.6",
     "vue-nav-tabs": "^0.5.7",
     "vuex-persist": "^3.1.3"
   },
