--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-kindergarten": "^0.3.3",
     "vue-multiselect": "^2.1.6",
     "vue-nav-tabs": "^0.5.7",
+    "vue2-datepicker": "^3.9.0",
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
