--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@kugatsu/vuenotification": "^1.1.4",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
@@ -22,10 +23,12 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "gsap": "^3.6.1",
     "install": "^0.13.0",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
     "nuxt-fontawesome": "^0.4.0",
+    "vee-validate": "^3.4.5",
     "vue-kindergarten": "^0.3.3",
     "vue-multiselect": "^2.1.6",
     "vue-nav-tabs": "^0.5.7",
