--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "@kugatsu/vuenotification": "^1.1.4",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/dayjs": "^1.3.1",
     "@nuxtjs/pwa": "^3.0.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.4",
     "gsap": "^3.6.1",
     "install": "^0.13.0",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
+    "nuxt-dropzone": "^1.0.4",
     "nuxt-fontawesome": "^0.4.0",
     "vee-validate": "^3.4.5",
     "vue-kindergarten": "^0.3.3",
