--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-multiselect": "^2.1.6",
     "vue-nav-tabs": "^0.5.7",
     "vue2-datepicker": "^3.9.0",
+    "vuelidate": "^0.7.6",
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
