--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "vue-nav-tabs": "^0.5.7",
     "vue2-datepicker": "^3.9.0",
     "vuelidate": "^0.7.6",
-    "vuex-persist": "^3.1.3"
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@nuxt/types": "~2.14.0",
