fix and features

--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "install": "^0.13.0",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
-    "nuxt-dropzone": "^1.0.4",
     "nuxt-fontawesome": "^0.4.0",
     "vee-validate": "^3.4.5",
+    "vue-file-agent": "^1.7.3",
     "vue-kindergarten": "^0.3.3",
     "vue-multiselect": "^2.1.6",
     "vue-nav-tabs": "^0.5.7",
