--- a/package.json
+++ b/package.json
@@ -25,17 +25,23 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
+    "downzip": "^2.0.0",
+    "file-saver": "^2.0.5",
     "gsap": "^3.6.1",
     "install": "^0.13.0",
+    "jszip": "^3.6.0",
+    "jszip-utils": "^0.1.0",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
     "nuxt-fontawesome": "^0.4.0",
     "vee-validate": "^3.4.5",
     "vue-file-agent": "^1.7.3",
+    "vue-horizontal-timeline": "^0.9.1",
     "vue-kindergarten": "^0.3.3",
     "vue-multiselect": "^2.1.6",
     "vue-nav-tabs": "^0.5.7",
     "vue2-datepicker": "^3.9.0",
+    "vuejs-countdown-timer": "^2.1.3",
     "vuelidate": "^0.7.6",
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
