--- a/package.json
+++ b/package.json
@@ -13,26 +13,27 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@kugatsu/vuenotification": "^1.1.4",
     "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.12.2",
-    "@nuxtjs/dayjs": "^1.3.1",
-    "@nuxtjs/pwa": "^3.0.2",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dayjs": "^1.4.0",
+    "@nuxtjs/pwa": "^3.3.5",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "bootstrap": "^4.5.2",
-    "bootstrap-vue": "^2.17.3",
-    "core-js": "^3.6.5",
-    "dayjs": "^1.10.4",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.17.3",
+    "dayjs": "^1.10.7",
     "downzip": "^2.0.0",
     "file-saver": "^2.0.5",
-    "gsap": "^3.6.1",
+    "gsap": "^3.7.1",
     "install": "^0.13.0",
-    "jszip": "^3.6.0",
+    "jszip": "^3.7.1",
     "jszip-utils": "^0.1.0",
-    "node-sass": "^5.0.0",
-    "nuxt": "^2.14.6",
+    "node-sass": "^6.0.1",
+    "nuxt": "^2.15.8",
+    "sass-loader": "^10",
     "nuxt-fontawesome": "^0.4.0",
     "vee-validate": "^3.4.5",
     "vue-file-agent": "^1.7.3",
@@ -40,13 +41,13 @@
     "vue-kindergarten": "^0.3.3",
     "vue-multiselect": "^2.1.6",
     "vue-nav-tabs": "^0.5.7",
-    "vue2-datepicker": "^3.9.0",
+    "vue2-datepicker": "^3.10.1",
     "vuejs-countdown-timer": "^2.1.3",
     "vuelidate": "^0.7.6",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
-    "@nuxt/types": "~2.14.0",
+    "@nuxt/types": "~2.15.8",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
@@ -56,7 +57,6 @@
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
-    "sass-loader": "^10.0.5",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0"
