--- a/package.json
+++ b/package.json
@@ -33,20 +33,22 @@
     "jszip-utils": "^0.1.0",
     "node-sass": "^6.0.1",
     "nuxt": "^2.15.8",
-    "sass-loader": "^10",
     "nuxt-fontawesome": "^0.4.0",
+    "sass-loader": "^10",
     "vee-validate": "^3.4.5",
     "vue-file-agent": "^1.7.3",
     "vue-horizontal-timeline": "^0.9.1",
     "vue-kindergarten": "^0.3.3",
     "vue-multiselect": "^2.1.6",
     "vue-nav-tabs": "^0.5.7",
+    "vue-pswipe": "^0.15.3",
     "vue2-datepicker": "^3.10.1",
     "vuejs-countdown-timer": "^2.1.3",
     "vuelidate": "^0.7.6",
     "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
+    "@nuxt/image": "^0.6.0",
     "@nuxt/types": "~2.15.8",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
