--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue-kindergarten": "^0.3.3",
     "vue-multiselect": "^2.1.6",
     "vue-nav-tabs": "^0.5.7",
+    "vue-progressive-image": "^3.2.0",
     "vue-pswipe": "^0.15.3",
     "vue2-datepicker": "^3.10.1",
     "vuejs-countdown-timer": "^2.1.3",
@@ -48,6 +49,7 @@
     "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
+    "@aceforth/nuxt-optimized-images": "^1.4.0",
     "@nuxt/types": "~2.15.8",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
